--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,4 @@
-/* CSS RESET*/
-*{
-  box-sizing: border-box;
-}
+/* CSS reset*/
 html, body, h1, h2, h3, h4, ul, ol, dl, li, dt, dd, p, div, span, img, a, table, tr, th, td {
     margin: 0;
     padding: 0;
@@ -33,7 +30,6 @@ html, body, h1, h2, h3, h4, ul, ol, dl, li, dt, dd, p, div, span, img, a, table,
 /* CSS font family*/
 body{
   font-family: 'Noto Serif JP', serif;
-  line-height: 1;
 }
 /* CSS font family ここまでー*/
 
