--- a/stylesheet.css
+++ b/stylesheet.css
@@ -30,7 +30,7 @@ html, body, h1, h2, h3, h4, ul, ol, dl, li, dt, dd, p, div, span, img, a, table,
 
 /* CSS font family*/
 body{
-  font-family: 'Noto Serif JP', serif;
+  font-family: "Kokoro", serif;
 }
 /* CSS font family ここまでー*/
 
